--- a/questions/what-is-jsx-and-how-does-it-work/en-US.mdx
+++ b/questions/what-is-jsx-and-how-does-it-work/en-US.mdx
@@ -12,7 +12,32 @@ JSX stands for JavaScript XML. It is a syntax extension for JavaScript that allo
 
 ### What is JSX?
 
-JSX stands for JavaScript XML. It is a syntax extension for JavaScript that allows you to write HTML-like code within JavaScript. JSX is primarily used with React to describe what the UI should look like.
+JSX stands for **JavaScript XML**. It is a syntax extension for JavaScript that allows you to write HTML-like code within JavaScript. JSX makes it easier to create React components by allowing you to write what looks like HTML directly in your JavaScript code.
+
+**Key points about JSX:**
+- JSX is a code where we write JavaScript into HTML-like syntax
+- When JSX is rendered, it gets transformed into React code, which then gets converted to HTML
+- Finally, the HTML is rendered in the browser
+
+### The JSX Transformation Process
+
+```
+JSX → React Code → HTML → Browser Rendering
+```
+
+For example:
+```jsx
+// 1. JSX code you write
+const element = <h1>Hello, world!</h1>;
+
+// 2. Gets transformed to React code
+const element = React.createElement('h1', null, 'Hello, world!');
+
+// 3. React creates HTML
+<h1>Hello, world!</h1>
+
+// 4. Browser renders the HTML
+```
 
 ### How does JSX work?
 
