--- a/questions/what-is-the-difference-between-state-and-props-in-react/en-US.mdx
+++ b/questions/what-is-the-difference-between-state-and-props-in-react/en-US.mdx
@@ -63,11 +63,56 @@ function MyComponent() {
 
 ### Props
 
-Props (short for properties) are read-only attributes passed from a parent component to a child component. They are used to pass data and event handlers down the component tree. Props are immutable, meaning they cannot be changed by the child component.
+Props (short for properties) are read-only attributes passed from a parent component to a child component. They are used to pass data and event handlers down the component tree.
 
-- Props are passed to the child component as an argument to the component function or as a property on the `this` object in class components
-- Props allow components to be reusable by passing different data to them
-- Props can be used to pass functions as well, enabling child components to communicate with parent components
+**Key characteristics of props:**
+
+1. **Props work like function arguments** - They are used to pass data to components
+2. **Props are read-only** - They cannot be changed by the child component
+3. **Main purpose** - To pass data from parent to child component
+4. **Props are basically objects** - All props are combined into a single object
+5. **Children prop** - If you pass data between opening and closing tags, it becomes the `children` prop
+
+**Example with your code:**
+
+```jsx
+function Greeting(props) {
+    return <h1>Hello! {props.name}</h1>;
+}
+
+function App() {
+    return (
+        <div>
+            <Greeting name="Ashish" />
+            <Greeting name="Teju" />
+        </div>
+    );
+}
+
+export default App;
+```
+
+**Understanding the `children` prop:**
+
+```jsx
+function Card({ children, title }) {
+    return (
+        <div className="card">
+            <h2>{title}</h2>
+            {children} {/* This renders whatever is between <Card></Card> tags */}
+        </div>
+    );
+}
+
+function App() {
+    return (
+        <Card title="My Card">
+            <p>This content becomes the children prop</p>
+            <button>Click me</button>
+        </Card>
+    );
+}
+```
 
 Example of props in a class component:
 
